# named_number

./: MANIFEST.in  README.md  __init__.py  fancy_number.py  name_fmt.py  named_number.py  options.py  pyproject.toml
src/: __main__.py  name_fmt.py  named_number.py  options.py
src/namednumber/: __init__.py  __main__.py  name_fmt.py  named_number.py
src/namednumber/wordlists/: 128_plural_animals.txt
tests/: basic.py
wordlists/: 128_singular_animals.txt  1k_plural_nouns.txt
